# inix

./: Cargo.toml  readme.org  shell.nix
src/: main.rs
src/templates/base/: .envrc  .envrc.template  shell.nix  shell.nix.template
src/templates/node/: shell.nix
src/templates/rust/: shell.nix
